# AudioFileConverter

AudioConverterConsole/: main.cpp
AudioConverterConsole/AudioConverter/: AudioConverter.pro
AudioConverterConsole/build-AudioConverter-Desktop_Qt_5_15_2_clang_64bit-Debug/: AudioConverter  Makefile
AudioConverterGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
AudioConverterLib/: CMakeLists.txt  Converter_global.h  converter.cpp  converter.h
AudioConverterQml/: contact.html  main.cpp  site.html  style.css
AudioConverterQml/AudioConverter/: main.qml
AudioConverterQml/build-AudioConverter-Desktop_Qt_5_15_2_clang_64bit-Debug/: Makefile  qrc_qml.cpp
AudioConverterQml/build-AudioConverter-Desktop_Qt_5_15_2_clang_64bit-Debug/AudioConverter.app/Contents/: Info.plist
AudioConverterQml/build-AudioConverter-Desktop_Qt_5_15_2_clang_64bit-Debug/AudioConverter.app/Contents/MacOS/: AudioConverter
